* Update redeeming.js to take advantage of new dialogs * Dialogs now support collapsing and expanding * Fix IITC about window - no longer resizes all onscreen dialogs

--- a/style.css
+++ b/style.css
@@ -503,7 +503,7 @@ h3 {
 
 .mods span {
   background-color: rgba(0, 0, 0, 0.3);
-  /* can’t use inline-block because Webkit’s implementation is buggy and
+  /* can’t use inline-block because Webkit's implementation is buggy and
    * introduces additional margins in random cases. No clear necessary,
    * as that’s solved by setting height on .mods. */
   display: block;
@@ -666,7 +666,6 @@ h3 {
   font-size: 16px;
 }
 
-
 /* update status */
 #updatestatus {
   background-color: rgba(8, 48, 78, 0.9);
@@ -712,6 +711,25 @@ h3 {
   padding: 2px 4px;
 }
 
+.ui-widget-overlay {
+  height: 100%;
+  left: 0;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 10000;
+  background:  #444;
+  opacity: 0.6;
+}
+
+.ui-modal {
+  z-index: 10001 !important;
+}
+
+.ui-tooltip {
+  z-index: 10002 !important;
+}
+
 .ui-tooltip, .ui-dialog a {
   color: #FFCE00;
 }
@@ -721,15 +739,8 @@ h3 {
   border-radius: 2px;
 }
 
-.ui-widget-overlay {
-  height: 100%;
-  left: 0;
-  position: fixed;
-  top: 0;
-  width: 100%;
-  z-index:9998;
-  background:  #444;
-  opacity: 0.6;
+.ui-dialog-modal .ui-dialog-titlebar-close {
+  display: none;
 }
 
 .ui-dialog-titlebar {
@@ -743,10 +754,26 @@ h3 {
   font-weight: bold;
 }
 
-.ui-dialog-titlebar-close {
+.ui-dialog-titlebar-button {
   position: absolute;
-  right: .2em;
-  top: 0;
+  float: left;
+  width: 17px;
+  height: 19px;
+  top: 2px;
+  cursor: pointer;
+  color: #FFCE00;
+  font-family: "Arial", sans;
+  font-size: 14px;
+  border-style: none;
+  background-color: rgba(0, 0, 0, 0);
+}
+
+.ui-dialog-titlebar-button-close {
+  right: 4px;
+}
+
+.ui-dialog-titlebar-button-collapse {
+  right: 28px;
 }
 
 .ui-dialog-content {
@@ -755,6 +782,10 @@ h3 {
   overflow-x: hidden;
   max-height: 600px !important;
   max-width: 700px !important;
+}
+
+.ui-dialog-content-hidden {
+  display: none !important;
 }
 
 .ui-dialog-buttonpane {
@@ -798,7 +829,7 @@ td + td {
 }
 
 /* redeem results *****************************************************/
-.redeem-result {
+.redeem-result-table {
   font-size: 14px;
   font-family: Roboto, Arial, Helvetica, sans-serif;
   table-layout: fixed;
@@ -807,6 +838,10 @@ td + td {
 .redeem-result tr > td:first-child {
   width: 50px;
   text-align: right;
+}
+
+.redeem-result-html {
+  font-family: Inconsolata, Consolas, Menlo, "Courier New", monospace;
 }
 
 .pl_nudge_date {
